# cmake-gtest-coverage-demo

./: CMakeLists.txt  README.md  build_and_test.sh  nontested_class.cpp  nontested_class.h  testapp.cpp  testclass_unittest.cpp  tested_class.cpp  tested_class.h
